--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -5,53 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
 
-    <style>
-        body {
-            background-color: #ebebeb;
-        }
-
-        .page-title {
-            background-color: #009587;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        .contenedor {
-            display: flex;
-            justify-content: space-between;
-            margin: 2rem;
-        }
-
-        .button {
-            width: 100%;
-            padding: 1rem;
-            margin-bottom: 2rem;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
-            text-decoration: none;
-        }
-
-        .button:hover {
-            background-color: #038073;
-            color: #fff;
-        }
-
-        .button-icon {
-            font-size: 3rem;
-            color: #000000;
-        }
-        .button-title {
-            color: #000000;  
-        }
-
-        .button-description {
-            color: #000000;  
-        }
-    </style>
 </head>
 <body>
     <div class="page-title">
@@ -59,7 +14,7 @@
     </div>
     <div class="container">
         <div class="contenedor">
-            <a href="" class="button">
+            <a href="formulario/formulario.html" class="button">
                 <i class="fas fa-pencil-alt fa-3x button-icon"></i>
                 <h2 class="button-title">Diagnosticar Paciente</h2>
                 <p class="button-description">Ingresa los datos necesarios para diagnosticar a un paciente.</p>
