--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -1,9 +1,9 @@
 <h3>Complementarios</h3>
-<div class="col-md-3">
+<div class="col-md-4">
     <div class="gray-box">
-        <div class="button-row">
+        <!-- <div class="button-row"> -->
             <div class="button-container opciones">
-            <h6 for="sustancias">Sustancias</h6>
+                <h6 for="sustancias">Sustancias</h6>
                 <div class="btn-group">
                     <button id="sustancias-si" class="btn btn-choice">Sí</button>
                     <button id="sustancias-no" class="btn btn-choice">No</button>
@@ -16,9 +16,26 @@
                     <button id="estudios-si" class="btn btn-choice">Sí</button>
                     <button id="estudios-no" class="btn btn-choice">No</button>
                 </div>
+                <div id="estudio-causa-natural" class="form-group margin-filas" style="display: none;">
+                    <h6 for="estudio-causa-natural">¿Se descarta causa natural?</h6>
+                    <select class="form-control" id="sexo" name="sexo">
+                        <option value="estudio-causa-natural-si">Sí</option>
+                        <option value="estudio-causa-natural-no">No</option>
+                        <option value="estudio-causa-natural-inconcluso">Inconcluso</option>
+                        <option value="-1" selected>Seleccioná una opción</option>
+                    </select>
+                </div>
+                <div id="estudio-comentario" class="margin-filas" style="display: none;">
+                    <h6 for="estudio-comentario">Comentario sobre el estudio</h6>
+                    <input type="text" class="form-control" id="comentario" name="comentario"
+                        placeholder="Ingrese un comentario del estudio">
+                </div>
+                <div class="image-container">
+                    <input type="file" id="imagen" name="imagen" class="image-upload">
+                    <img src="#" alt="Imagen Mancha" class="image-preview" id="imagen-preview">
+                    <div class="insert-photo-message">Insertar Foto</div>
+                </div>
             </div>
-        </div>
+        <!-- </div> -->
     </div>
 </div>
-
-
