MOCK carga datos paciente terminado

--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -1,5 +1,5 @@
 <h3>Complementarios</h3>
-<div class="col-md-4">
+<div class="col-md-12">
     <div class="gray-box">
         <!-- <div class="button-row"> -->
             <div class="button-container opciones">
@@ -30,7 +30,7 @@
                     <input type="text" class="form-control" id="comentario" name="comentario"
                         placeholder="Ingrese un comentario del estudio">
                 </div>
-                <div class="image-container">
+                <div id="image-container" class="image-container" style="display: none;">
                     <input type="file" id="imagen" name="imagen" class="image-upload">
                     <img src="#" alt="Imagen Mancha" class="image-preview" id="imagen-preview">
                     <div class="insert-photo-message">Insertar Foto</div>
