--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -1,7 +1,19 @@
-<h3>Complementarios</h3>
-<div class="col-md-12">
-    <div class="gray-box">
-        <!-- <div class="button-row"> -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="formulario.css">
+</head>
+
+<body>
+    <h3>Complementarios</h3>
+    <div class="col-md-12">
+        <div class="gray-box">
+            <!-- <div class="button-row"> -->
             <div class="button-container opciones">
                 <h6 for="sustancias">Sustancias</h6>
                 <div class="btn-group">
@@ -36,6 +48,13 @@
                     <div class="insert-photo-message">Insertar Foto</div>
                 </div>
             </div>
-        <!-- </div> -->
+            <!-- </div> -->
+        </div>
     </div>
-</div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="complementarios.js"></script>
+</body>
+
+</html>
