pantalla diagnostico no integrada

--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -99,6 +99,10 @@
                 </div>
             </div>
         </div>
+
+        <!-- Popup -->
+        <div id="diagnostico-popup"></div>
+        <!-- End Popup -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
