--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="page-title">
-        <h1>Sistema Experto - Esquizofrenia</h1>
+        <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
     </div>
     <div class="container" id="formulario" style="overflow-x: hidden;">
         <div class="row data-columns">
