--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -76,7 +76,7 @@
                 <h6 for="tipo-pensamiento">Pensamiento</h6>
                 <select class="form-control" id="pensamiento" name="pensamiento">
                     <option value="pensamiento-sin-particularidades">Sin particularidades</option>
-                    <option value="pensamiento-conserva-idea-directriz">Conserva idea directriz</option>
+                    <!-- <option value="pensamiento-conserva-idea-directriz">Conserva idea directriz</option> -->
                     <option value="pensamiento-tangencial">Tangencial</option>
                     <option value="pensamiento-circunstancial">Circunstancial</option>
                     <option value="pensamiento-meticulosidad">Meticulosidad</option>
