--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -15,7 +15,7 @@
         <div class="gray-box">
             <!-- <div class="button-row"> -->
             <div class="button-container opciones">
-                <h6 for="sustancias">Sustancias</h6>
+                <h6 for="sustancias">Bajo sustancias o efectos médicos</h6>
                 <div class="btn-group">
                     <button id="sustancias-si" class="btn btn-choice">Sí</button>
                     <button id="sustancias-no" class="btn btn-choice">No</button>
@@ -39,13 +39,19 @@
                 </div>
                 <div id="estudio-comentario" class="margin-filas" style="display: none;">
                     <h6 for="estudio-comentario">Comentario sobre el estudio</h6>
-                    <input type="text" class="form-control" id="comentario" name="comentario"
-                        placeholder="Ingrese un comentario del estudio">
+                    <!-- <input type="text" class="form-control" id="comentario" name="comentario"
+                        placeholder="Ingrese un comentario del estudio"> -->
+                    <textarea id="estudio-comentario" class="form-control" rows="4"
+                        placeholder="Comentarios sobre el estudio"></textarea>
                 </div>
                 <div id="image-container" class="image-container" style="display: none;">
                     <input type="file" id="imagen" name="imagen" class="image-upload">
                     <img src="#" alt="Imagen Mancha" class="image-preview" id="imagen-preview">
-                    <div class="insert-photo-message">Insertar Foto</div>
+
+                    <div class="insert-photo-message">
+                        <i class="fas fa-regular fa-file-image 3x button-icon"></i>
+                        Insertar Foto
+                    </div>
                 </div>
             </div>
             <!-- </div> -->
