--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="index.css">
 
 </head>
+
 <body>
     <div class="page-title">
         <h1>Sistema Experto - Diagnóstico de Esquizofrenia</h1>
@@ -15,14 +17,16 @@
     <div class="container">
         <div class="contenedor">
             <a href="formulario/formulario.html" class="button">
-                <i class="fas fa-pencil-alt fa-3x button-icon"></i>
+                <!-- <i class="fas fa-pencil-alt fa-3x button-icon"></i> -->
+                <i class="fas fa-stethoscope fa-3x button-icon" style="color: #0f0f10;"></i>
                 <h2 class="button-title">Diagnosticar Paciente</h2>
                 <p class="button-description">Ingresa los datos necesarios para diagnosticar a un paciente.</p>
             </a>
         </div>
         <div class="contenedor">
             <a href="" class="button">
-                <i class="fas fa-search fa-3x button-icon"></i>
+                <!-- <i class="fas fa-search fa-3x button-icon"></i> -->
+                <i class="fas fa-solid fa-file-contract fa-3x button-icon"></i>
                 <h2 class="button-title">Consultar Casos</h2>
                 <p class="button-description">Consulta casos previamente registrados.</p>
             </a>
@@ -32,4 +36,5 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
