rename de todos los valores de sintomas positivos y negativos en reglas

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -51,11 +51,11 @@
                 <option value="actividad-compulsiones">Compulsiones</option>
                 <option value="actividad-apraxia">Apraxia</option>
                 <option value="actividad-ataxia">Ataxia</option>
-                <option value="actividad-ccopraxia">Ecopraxia</option>
+                <option value="actividad-ecopraxia">Ecopraxia</option>
                 <option value="actividad-manierismo">Manierismo</option>
                 <option value="actividad-estereotipia">Estereotipia</option>
-                <option value="actividad-M¿motora">Motora</option>
-                <option value="actividad-interceptacion-cinrtica">Interceptación cinética</option>
+                <option value="actividad-motora">Motora</option>
+                <option value="actividad-interceptacion-cinetica">Interceptación cinética</option>
                 <option value="actividad-negativismo">Negativismo</option>
                 <option value="actividad-obediencia-automatica">Obediencia automática</option>
                 <option value="actividad-flexibilidad-cerea">Flexibilidad cerea</option>
@@ -67,7 +67,7 @@
         <div id="negativo-tipo-afectividad" class="form-group margin-filas">
             <h6 for="negativo-tipo-afectividad">Afectividad</h6>
             <select class="form-control" id="afectividad" name="afectividad">
-                <option value="afectividad-Eutimia">Eutimia</option>
+                <option value="afectividad-eutimia">Eutimia</option>
                 <option value="afectividad-timia-displacentera">Timia displacentera</option>
                 <option value="afectividad-hipertimia-placentera">Hipertimia placentera</option>
                 <option value="afectividad-hipertimia-displacentera">Hipertimia displacentera</option>
@@ -76,7 +76,7 @@
                 <option value="afectividad-labilidad">Labilidad</option>
                 <option value="afectividad-irritabilidad">Irritabilidad</option>
                 <option value="afectividad-expansivo">Expansivo</option>
-                <option value="afectividad-onapropiado">Inapropiado</option>
+                <option value="afectividad-inapropiado">Inapropiado</option>
                 <option value="afectividad-anhedonia">Anhedonia</option>
                 <option value="-1" selected>Seleccioná una opción</option>
             </select>
