--- a/demo/src/main/resources/static/formulario/sintomasPositivos.html
+++ b/demo/src/main/resources/static/formulario/sintomasPositivos.html
@@ -60,7 +60,7 @@
                     <option value="lenguaje-latencia">Latencia de respuesta</option>
                     <option value="lenguaje-mutismo">Mutismo</option>
                     <option value="lenguaje-musitaciones">Musitaciones</option>
-                    <option value="lenguaje-soliloqui">Soliloqui</option>
+                    <option value="lenguaje-soliloquio">Soliloquio</option>
                     <option value="lenguaje-noelogismo">Noelogísmo</option>
                     <option value="lenguaje-jergafasia">Jergafasia</option>
                     <option value="lenguaje-ecolalia">Ecolalia</option>
@@ -81,7 +81,7 @@
                     <option value="pensamiento-circunstancial">Circunstancial</option>
                     <option value="pensamiento-meticulosidad">Meticulosidad</option>
                     <option value="pensamiento-viscosidad">Viscosidad</option>
-                    <option value="pensamiento-pensamiento-concreto">Pensamiento concreto</option>
+                    <option value="pensamiento-concreto">Pensamiento concreto</option>
                     <option value="pensamiento-idea-fija">Idea fija</option>
                     <option value="pensamiento-interceptacion-pensamiento">Interceptación del pensamiento</option>
                     <option value="pensamiento-disgregacion">Disgregación</option>
