--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -29,8 +29,8 @@
                     <button id="estudios-no" class="btn btn-choice">No</button>
                 </div>
                 <div id="estudio-causa-natural" class="form-group margin-filas" style="display: none;">
-                    <h6 for="estudio-causa-natural">¿Se descarta causa natural?</h6>
-                    <select class="form-control" id="sexo" name="sexo">
+                    <h6 for="estudio-causa-natural">¿Se pueden atribuir los síntomas a una causa orgánica?</h6>
+                    <select class="form-control" id="estudio-causa-natural-opcion" name="estudio-causa-natural-opcion">
                         <option value="estudio-causa-natural-si">Sí</option>
                         <option value="estudio-causa-natural-no">No</option>
                         <option value="estudio-causa-natural-inconcluso">Inconcluso</option>
