--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -2,8 +2,8 @@
 <div class="col-md-12">
     <div class="gray-box">
 
-        <div id="sintomas-negativos-duracion" class="form-group margin-filas">
-            <h6 for="sintomas-negativos-duracion">Duración de los Síntomas negativos</h6>
+        <div id="sintomas-negativos-duracion-id" class="form-group margin-filas">
+            <h6 for="sintomas-negativos-duracion-text">Duración de los Síntomas negativos</h6>
             <!-- <input type="number" class="form-control" id="negativos-duracion" name="negativos-duracion"
                 placeholder="Ingrese la duración"> -->
                 <select class="form-control" id="sintomas-negativos-duracion" name="sintomas-negativos-duracion">
@@ -53,8 +53,7 @@
                 <option value="actividad-ataxia">Ataxia</option>
                 <option value="actividad-ecopraxia">Ecopraxia</option>
                 <option value="actividad-manierismo">Manierismo</option>
-                <option value="actividad-estereotipia">Estereotipia</option>
-                <option value="actividad-motora">Motora</option>
+                <option value="actividad-estereotipia-motora">Estereotipia Motora</option>
                 <option value="actividad-interceptacion-cinetica">Interceptación cinética</option>
                 <option value="actividad-negativismo">Negativismo</option>
                 <option value="actividad-obediencia-automatica">Obediencia automática</option>
