--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -22,16 +22,16 @@
                     <div class="form-group margin-filas">
                         <label for="nombre">Nombre</label>
                         <input type="text" class="form-control" id="nombre" name="nombre"
-                            placeholder="Ingrese el nombre del paciente">
+                            placeholder="Ingrese el nombre del paciente" required>
                     </div>
                     <div class="form-group margin-filas">
                         <label for="edad">Edad</label>
                         <input type="number" class="form-control" id="edad" name="edad"
-                            placeholder="Ingrese la edad del paciente">
+                            placeholder="Ingrese la edad del paciente" min="1" max="120" required>
                     </div>
                     <div class="form-group margin-filas">
                         <label for="sexo">Sexo</label>
-                        <select class="form-control" id="sexo" name="sexo">
+                        <select class="form-control" id="sexo" name="sexo" required>
                             <option value="Femenino">Femenino</option>
                             <option value="Masculino">Masculino</option>
                             <option value="-1" selected>Seleccionar sexo</option>
