agrego validaciones para que los campos sean requeridos antes de diagnosticar

--- a/demo/src/main/resources/static/formulario/complementarios.html
+++ b/demo/src/main/resources/static/formulario/complementarios.html
@@ -20,6 +20,7 @@
                     <button id="sustancias-si" class="btn btn-choice">Sí</button>
                     <button id="sustancias-no" class="btn btn-choice">No</button>
                 </div>
+                <div id="error-sustancias" class="error-message-text"></div>
             </div>
 
             <div class="button-container opciones">
@@ -28,7 +29,9 @@
                     <button id="estudios-si" class="btn btn-choice">Sí</button>
                     <button id="estudios-no" class="btn btn-choice">No</button>
                 </div>
-                <div id="estudio-causa-natural" class="form-group margin-filas" style="display: none;">
+                <div id="error-estudios" class="error-message-text"></div>
+
+                <div id="estudio-causa-natural-id" class="form-group margin-filas" style="display: none;">
                     <h6 for="estudio-causa-natural">¿Se pueden atribuir los síntomas a una causa orgánica?</h6>
                     <select class="form-control" id="estudio-causa-natural-opcion" name="estudio-causa-natural-opcion">
                         <option value="estudio-causa-natural-si">Sí</option>
