--- a/demo/src/main/resources/static/formulario/formulario.html
+++ b/demo/src/main/resources/static/formulario/formulario.html
@@ -47,6 +47,7 @@
                         <button id="transtorno-autista-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="transtorno-autista-no" class="btn btn-choice mb-2">No</button>
                     </div>
+                    <div id="error-transtorno-autista" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="transtorno-comunicacion">Trastorno de la Comunicación en la Infancia</h6>
@@ -54,6 +55,7 @@
                         <button id="transtorno-comunicacion-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="transtorno-comunicacion-no" class="btn btn-choice mb-2">No</button>
                     </div>
+                    <div id="error-transtorno-comunicacion" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="transtorno-esquizoafectivo">Trastorno Esquizoafectivo</h6>
@@ -61,6 +63,7 @@
                         <button id="transtorno-esquizoafectivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="transtorno-esquizoafectivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
+                    <div id="error-transtorno-esquizoafectivo" class="error-message-text"></div>
                 </div>
             </div>
             <div class="col-md-3 btn-bool">
@@ -70,6 +73,7 @@
                         <button id="transtorno-depresivo-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="transtorno-depresivo-no" class="btn btn-choice mb-2">No</button>
                     </div>
+                    <div id="error-transtorno-depresivo" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="transtorno-bipolar">Trastorno Bipolar con Características Psicóticas</h6>
@@ -77,6 +81,7 @@
                         <button id="transtorno-bipolar-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="transtorno-bipolar-no" class="btn btn-choice mb-2">No</button>
                     </div>
+                    <div id="error-transtorno-bipolar" class="error-message-text"></div>
                 </div>
                 <div class="form-group margin-filas opciones">
                     <h6 for="antecedentes-familiares">Antecedentes Familiares Psiquiatricos</h6>
@@ -84,6 +89,7 @@
                         <button id="antecedentes-familiares-si" class="btn btn-choice mb-2">Sí</button>
                         <button id="antecedentes-familiares-no" class="btn btn-choice mb-2">No</button>
                     </div>
+                    <div id="error-antecedentes-familiares" class="error-message-text"></div>
                 </div>
             </div>
             <div id="sintomas-positivos-container"></div>
