mejora visual en mensaje de justificacion para no hacer scroll horizontal

--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -13,17 +13,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <p class="diagnostico-text">
-                <h3 class="posible-esquizofrenia" style="display: none;" id="posible-esquizofrenia">
+            <div class="col-md-12 diagnostico-text" >
+                <!-- <p class="diagnostico-text"> -->
+                <h2 class="posible-esquizofrenia" style="display: none;" id="posible-esquizofrenia">
                     Posible Esquizofrenia
-                </h3>
-                <h3 class="evaluar-temporal" style="display: none;" id="evaluar-temporal">
+                </h2>
+                <h2 class="evaluar-temporal" style="display: none;" id="evaluar-temporal">
                     Evaluar Esquizofrenia Temporal
-                </h3>
-                <h3 class="no-posible-esquizofrenia" style="display: none" id="no-posible-esquizofrenia">
+                </h2>
+                <h2 class="no-posible-esquizofrenia" style="display: none" id="no-posible-esquizofrenia">
                     Esquizofrenia No Posible
-                </h3>
+                </h2>
                 </p>
             </div>
         </div>
