agrego nombrePaciente en popup diagnostico

--- a/demo/src/main/resources/static/formulario/diagnostico.html
+++ b/demo/src/main/resources/static/formulario/diagnostico.html
@@ -8,7 +8,7 @@
             </div>
         </div> -->
         <div id="diagnostico-container" style="margin-top: 3%;">
-            <h3>Diagnóstico: </h3>
+            <h3>Diagnóstico para <span id="nombre-paciente"></span>:</h3>
             <div class="diagnostico-texto">
                 <h3 id="posible-esquizofrenia" class="posibilidad-seccion posible-esquizofrenia">
                     <strong> Existe posibilidad de esquizofrenia</strong>
