cambios visuales en menu principal

--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="contenedor">
             <a href="formulario/formulario.html" class="button">
-                <!-- <i class="fas fa-pencil-alt fa-3x button-icon"></i> -->
+              <!-- <i class="fas fa-user-md fa-3x button-icon"></i> -->
                 <i class="fas fa-stethoscope fa-3x button-icon" style="color: #0f0f10;"></i>
                 <h2 class="button-title">Diagnosticar Paciente</h2>
                 <p class="button-description">Ingresa los datos necesarios para diagnosticar a un paciente.</p>
@@ -26,8 +26,16 @@
         <div class="contenedor">
             <a href="" class="button">
                 <!-- <i class="fas fa-search fa-3x button-icon"></i> -->
-                <i class="fas fa-solid fa-file-contract fa-3x button-icon"></i>
+                <i class="fas fa-folder-open fa-3x button-icon"></i>
                 <h2 class="button-title">Consultar Casos</h2>
+                <p class="button-description">Consulta casos previamente registrados.</p>
+            </a>
+        </div>
+        <div class="contenedor">
+            <a href="" class="button">
+              <i class="fas fa-solid fa-file-contract fa-3x button-icon"></i>
+                <!-- <i class="fas fa-solid fa-file-export fa-3x button-icon"></i> -->
+                <h2 class="button-title">Exportar Datos</h2>
                 <p class="button-description">Consulta casos previamente registrados.</p>
             </a>
         </div>
