fix en reglas obligatorias (puntaje) y algunos cambios pequeños

--- a/demo/src/main/resources/static/formulario/sintomasNegativos.html
+++ b/demo/src/main/resources/static/formulario/sintomasNegativos.html
@@ -17,7 +17,7 @@
             <h6 for="negativo-tipo-aspecto">Aspecto</h6>
             <select class="form-control" id="aspecto" name="aspecto" required>
                 <option value="aspecto-facie">Facie</option>
-                <option value="aspecto-aliño">Aliño</option>
+                <option value="aspecto-alinio">Aliño</option>
                 <option value="aspecto-aseo">Aseo</option>
                 <option value="aspecto-bizarro">Bizarro</option>
                 <option value="aspecto-extravagante">Extravagante</option>
